--- a/Final /ArticlePage.css
+++ b/Final /ArticlePage.css
@@ -14,10 +14,17 @@ hr{
     margin-bottom:25px;
 }
 
+h2{
+    text-align: center;
+    font-family: 'Michroma', sans-serif;
+    font-size: 15px;
+    color: black;
+}
+
 a:link    {color:#000000; background-color:transparent; text-decoration:none}
 a:visited {color:black; background-color:transparent; text-decoration:none}
-a:hover   {color:#ff0000; background-color:transparent; text-decoration:underline}
-a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
+a:hover   {color:white; background-color:transparent; text-decoration:underline}
+a:active  {color:white; background-color:transparent; text-decoration:none}
 
 .navlinks{
     text-align: center;
@@ -44,13 +51,13 @@ a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
     
 }
 
-#footer {
+.footer {
  background-color: ;
  font-size: 15px;
  font-family:'Michroma', sans-serif;
  text-align: center;
- width: 90%;
- margin-left:5%;
+ width: 100%;
+ 
  
 }
 
@@ -100,7 +107,7 @@ a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
         height: 500px;
     }
     
-      }
+      
      hr{
     
     width: 90%;
@@ -132,16 +139,18 @@ a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
     
 }
 
-#footer {
+.footer {
  width: 100%;
     
+}
+
 }
     @media only screen and (max-width : 640px), only screen and (max-device-width : 640px){
     .masonryImage{
         height: 500px;
     }
         
-         }
+         
      hr{
     
     width: 90%;
@@ -173,16 +182,17 @@ a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
     
 }
 
-#footer {
+.footer {
  width: 100%;
     
 }
-    
+
+    }
     @media only screen and (max-width : 480px), only screen and (max-device-width : 640px){
     .masonryImage{
         height: 500px;
     }
-     }
+    
      hr{
     
     width: 90%;
@@ -214,7 +224,54 @@ a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
     
 }
 
-#footer {
+.footer {
  width: 100%;
     
 }
+
+ }
+
+@media only screen and (max-width : 375px), only screen and (max-device-width : 480px){
+
+.masonryImage{
+        height: 500px;
+    }
+    
+     hr{
+    
+    width: 90%;
+}
+
+#hr1{
+    width: 90%;
+}
+
+
+
+.navlinks{
+    width: 100;
+}
+
+.ZonedIn{
+    width: 100%;
+}
+
+#container{
+    width: 100%;
+
+}
+
+.masonryImage{
+    text-align: center;
+    padding:2px;
+    width: 100%;
+    
+}
+
+.footer {
+ width: 100%;
+    
+}
+
+}
+   
