--- a/Final /FormPage.css
+++ b/Final /FormPage.css
@@ -9,10 +9,16 @@ hr{
 
 }
 
+#hr{
+    border-color: black;
+    margin-top: 20%;
+    width: 100%;
+}
+
 a:link    {color:#000000; background-color:transparent; text-decoration:none}
 a:visited {color: black; background-color:transparent; text-decoration:none}
-a:hover   {color:#ff0000; background-color:transparent; text-decoration:underline}
-a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
+a:hover   {color:white; background-color:transparent; text-decoration:underline}
+a:active  {color:white; background-color:transparent; text-decoration:none}
 
 .navlinks{
     text-align: center;
@@ -25,10 +31,18 @@ a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
     text-align: center;
     font-family: 'Michroma', sans-serif;
     font-size: 25px;
+    margin-top: 10px;
 }
  
 
-
+.footer {
+ background-color: ;
+ font-size: 15px;
+ font-family:'Michroma', sans-serif;
+ text-align: center;
+ 
+}   
+  
 /**********/
 
 .cb-slideshow,
@@ -165,7 +179,6 @@ a:active  {color:#ff0000; background-color:transparent; text-decoration:none}
 
 
 
-
 body {font-family: 'Michroma', sans-serif; font-size: 13px;}
  
 #container {width:300px; margin: 0 auto; margin-top: 20px; background-color: white;padding: 10px; border-radius: 3px;}
@@ -182,9 +195,6 @@ form input[type="email"] {width:160px;}
 
 form .line {clear:both;}
 form .line.submit {text-align:right;}*/ 
-
-
-
 
     
 @media only screen and (max-width : 960px), only screen and (max-device-width : 960px){
@@ -220,10 +230,17 @@ form .line.submit {text-align:right;}*/
 }
     
 
+    
+.footer {
+ background-color: ;
+ font-size: 15px;
+ font-family:'Michroma', sans-serif;
+ text-align: center;
+ 
 }
 
 
-
+}
 
 @media only screen and (max-width : 640px), only screen and (max-device-width : 640px){
     hr{
@@ -242,11 +259,10 @@ form .line.submit {text-align:right;}*/
     text-align: center;
     font-family: 'Michroma', sans-serif;
     font-size: 25px;
-     width: 100%;
-        
-        
+     width: 100%;        
 }
  
+  
 .container {
     width:100%; margin: 0 auto; margin-top: 20px; background-color: white;padding: 10px; border-radius: 3px;
 
@@ -256,7 +272,14 @@ form .line.submit {text-align:right;}*/
      display:inline-block; width:100%;  
 }
     
-    
+   .footer {
+ background-color: ;
+ font-size: 15px;
+ font-family:'Michroma', sans-serif;
+ text-align: center;
+ width: 90%;
+}
+   
     
 }
 
@@ -291,7 +314,58 @@ form .line.submit {text-align:right;}*/
      display:inline-block; width:100%;  
 }
     
-    
+    .footer {
+ background-color: ;
+ font-size: 15px;
+ font-family:'Michroma', sans-serif;
+ text-align: center;
+ width: 90%;
+}
+  
     
 }
 
+@media only screen and (max-width : 375px), only screen and (max-device-width : 480px){
+
+
+
+  hr{
+    border-color: black;
+    width: 90%; 
+    }
+        
+    .navlinks{
+    text-align: center;
+    font-family: 'Michroma', sans-serif;
+    font-size: 15px;
+    color: white;
+}
+
+    .ZonedIn{
+    text-align: center;
+    font-family: 'Michroma', sans-serif;
+    font-size: 25px;
+     width: 100%;
+        
+        
+}
+ 
+.container {
+    width:100%; margin: 0 auto; margin-top: 20px; background-color: white;padding: 10px; border-radius: 3px;
+
+}
+        
+ .form label {
+     display:inline-block; width:100%;  
+}
+.footer {
+ background-color: ;
+ font-size: 15px;
+ font-family:'Michroma', sans-serif;
+ text-align: center;
+ width: 100%;
+}
+  
+
+
+}
